image overflow fix

--- a/blog/static/css/detail.css
+++ b/blog/static/css/detail.css
@@ -7,6 +7,7 @@
   height: auto;
   width: 100%;
   height: 350px;
+  overflow: hidden;
   z-index: 0;
   text-align: center;
   background: black;
